# Fortexa

./: .gitignore  API.md  API.md.backup  CHANGELOG.md  Cargo.toml  DEBUG.md  DEVELOPMENT.md  EBPF.md  README.md  SECURITY.md  USAGE.md  build.rs  build_all.sh  rules.json  setup-dev.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  feature_request.md
.github/workflows/: check-changelog.yml  ci.yml
src/: lib.rs  main.rs  rules.rs
src/api/: api_server.rs  mod.rs
src/api/iptables/: api_iptables.rs  mod.rs
src/core/: config.rs  engine.rs  mod.rs  rules.rs
src/firewall/: core.rs  error.rs  iptables.rs  manager.rs  mod.rs  rules_core.rs
src/firewall/iptables/: iptables.rs  iptables_impl.rs  iptables_manager.rs  mod.rs  rules.rs
src/firewall_daemon/: core.rs  firewall_daemon.rs  iptables_daemon.rs  mod.rs
src/modules/: mod.rs
src/modules/iptables/: filter.rs  mod.rs
src/modules/logging/: logger.rs  mod.rs
src/modules/netshield/: constants.rs  filter.rs  mod.rs  mod_embedded.rs  security.rs
src/services/: mod.rs  rest.rs
src/storage/: filedb.rs  mod.rs
tests/: api_tests.rs  firewall_tests.rs  integration_tests.rs  lib.rs  mod.rs  system_firewall.rs  system_tests.rs
tests/common/: iptables.rs  mod.rs
tests/firewall/: core_tests.rs  mod.rs  rules_tests.rs
tests/modules_tests/: iptables_tests.rs  logging_tests.rs  mod.rs
tests/services_tests/: mod.rs  rest_tests.rs
