[package]
name = "fortexa"
version = "0.1.0"
edition = "2024"

[lib]
name = "fortexa"
path = "src/lib.rs"

[[bin]]
name = "fortexa"
path = "src/main.rs"

[dependencies]
pnet = "0.35"
ipnetwork = { version = "0.21", features = ["serde"] }
iptables = "0.5"
hyper = "1.6.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
tempfile = "3.19"
mockall = "0.13"
once_cell = "1.21"

[dev-dependencies]
mockall = "0.13"
ipnetwork = "0.20"
tower = "0.5"
