[package]
name = "fortexa"
version = "0.1.0"
edition = "2024"

[lib]
name = "fortexa"
path = "src/lib.rs"

[[bin]]
name = "fortexa"
path = "src/main.rs"

[dependencies]
# Core dependecies
config = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
uuid = { version = "1.16", features = ["v4"] }

# Module-specific dependencies
# IPTables
iptables = "0.5"
regex = "1.10"

# Logging
chrono = "0.4"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"

# REST API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hyper = "1.6"
aya = "0.13.1"
if-addrs = "0.14.0"
bincode = "2.0.1"

[dev-dependencies]
tempfile = "3.19"
mockall = "0.13"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
portpicker = "0.1"

# pnet = "0.35"
# ipnetwork = { version = "0.21", features = ["serde"] }
# futures = "0.3"
# once_cell = "1.21"
